shortly/src/components/Form/style.css
.form-section {
  background: var(--background);
}

.form {
  position: relative;
  transform: translateY(-8rem);
  background: var(--darkViolet);
  border-radius: 1rem;
  padding: 5.6rem 6.4rem;
  display: flex;
  align-items: center;
  column-gap: 2.4rem;
  overflow: hidden;
}

.form::before {
  content: "";
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0%;
  left: 0%;
  background-image: url("/images/bg-boost-desktop.svg");
  background-repeat: no-repeat;
  background-size: 100%;
}

.form__input-group {
  position: relative;
  width: 100%;
  z-index: 999;
}

.form__input-group input {
  font-size: 2rem;
  color: var(--grayishViolet);
  width: 100%;
  padding: 1.6rem 3.2rem;
  border-radius: 1rem;
}

.form__input-group input::placeholder {
  font-size: 2rem;
  font-weight: 500;
  color: var(--grayishViolet);
}

.form__input-group label {
  display: block;
  height: 0;
  visibility: hidden;
}

.form__error {
  position: absolute;
  font-size: 1rem;
  width: 100%;
  top: 100%;
  left: 0;
  padding-left: 2rem;
  padding-top: 0.8rem;
  color: var(--red);
}

.form button {
  z-index: 999;
}

.short-links {
  display: flex;
  flex-direction: column;
  row-gap: 1.6rem;
}

.short-links__item {
  background: var(--white);
  padding: 1.6rem 2.4rem;
  border-radius: 1rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.short-links__result {
  display: flex;
  align-items: center;
  column-gap: 2.4rem;
}

.original-link,
.short-link {
  font-size: 2rem;
  font-weight: 500;
}

.original-link {
  color: var(--veryDarkViolet);
  overflow: hidden;
}

.short-link {
  color: var(--cyan);
}

@media only screen and (max-width: 37.5em) {
  .form {
    flex-direction: column;
    align-items: stretch;
    row-gap: 1.6rem;
    padding: 2.4rem;
  }

  .short-links__item,
  .short-links__result {
    flex-direction: column;
    align-items: stretch;
  }

  .original-link {
    border-bottom: 1px solid var(--gray);
    padding: 1.4rem;
  }

  .short-link {
    padding: 1.4rem;
  }
}

